# ailit-agent

./: .gitignore  README.md  claude-code-in-ailit-agent.md  cloud-ru  conftest.py  project.yaml  pyproject.toml  user-test.md
config/: test.local.yaml.example
context/: INDEX.md
design/: BRANDBOOK_CANDY.md  DESKTOP_BOUNDARIES.md  INDEX.md
desktop/: UX_CHECKPOINT_G9_2.md  UX_GO_G9_2.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
docs/: INDEX.md  ailit-ai-memory-implementation.md  design.md  g9-9-release-checklist.md  memory-canon.md  project-workflow.md  readme_agents.md  runtime-development-with-ai-multi-agents.md  usage-fields.md
plan/: 10-context-ledger-memory-highlights.md  11-agent-memory-llm-journal.md  12-pag-trace-delta-desktop-sync.md  13-agent-memory-contract-recovery.md  14-agent-memory-planner-command-contract.md  14-agent-memory-runtime.md  15-broker-draft.md  16-D-compact.md  17-agent-memory-start-feature.md  17-agents-pipeline-canon.md  18-desktop-memory-graph-3dmvc.md  19-desktop-stack-chat-freeze-pag-trace.md  20-memory-cli-broker-viz.md  5-workflow-perm.md  6-read-improve-strategy.md  7-workflow-project-architecture-graph.md  8-agents-runtime.md  9-ailit-ui.md  agent-core-architecture.md  agent-core-provider-strategy.md  agent-core-workflow.md  ailit-bash-strategy.md  ailit-global-agent-teams-strategy.md  chat-agent-ux-refs.md  chat-shell-ux-stop.md  deploy-project-strategy.md  m3-acceleration-layer.md  m3-evaluation-suite.md  m3-governance.md  memory-preview-4.md  project-orchestrator-strategy.md  read-6-r4.4-memory-blocks-research.md  workflow-hybrid-memory-mcp.md  workflow-memory-3.md  workflow-memory-4.md  workflow-token-economy-recipe.md
plans/: 12-pag-trace-delta-desktop-sync.md
prompts/: agent-memory-rework-target-doc.txt  agent-memory-start-research.txt  review-target-doc-workflow-result.txt  startf.txt  task.txt
scripts/: build_start_feature_execution_plan.py  install  pag-delete  pag-read  page_delete  reinstall  reset-global-db  start-e2e  test  test-e2e
tests/: conftest.py  test_agent_log_discovery.py  test_agent_memory_ailit_config.py  test_agent_memory_config.py  test_agent_memory_session_log_layout_task_1_1.py  test_agent_provider_config.py  test_apply_patch_tool.py  test_bash_chat_store.py  test_bash_runner.py  test_bash_tool_events.py  test_bash_tools_os_config.py  test_capabilities.py  test_chat_presenters.py  test_chat_transcript_view.py  test_chat_workflow_runner.py  test_cli_agent_tui_default.py  test_compat_adapter.py  test_config_cli.py  test_config_store.py  test_context_ledger_events.py  test_d_level_compact.py  test_debug_bundle.py  test_g13_agent_memory_contract_integration.py  test_g13_agent_memory_llm_pipeline.py  test_g13_agentwork_change_feedback.py  test_g13_link_claims.py  test_g13_pag_graph_write_service.py  test_g13_semantic_c_identity.py  test_g14_agent_memory_external_event_mapping.py  test_g14_agent_memory_legacy_quarantine.py  (+75 more)
(+826 files in other folders)
