[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ailit-agent"
version = "0.1.0"
description = "ailit-agent: runtime core, session loop, workflow engine, ailit CLI"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.20",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
chat = [
    "streamlit>=1.30",
]
tui = [
    "textual>=0.47.0",
]

[project.scripts]
ailit = "ailit.cli:main"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["agent_core*", "workflow_engine*", "ailit*", "project_layer*"]

[tool.pytest.ini_options]
pythonpath = ["tools", "tests/e2e"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: сетевые live-тесты (ключ и явное согласие)",
    "e2e: CLI и сгенерированное приложение в .ailit (subprocess)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
